<resources>
    <string name="app_name" translatable="false">Alamart</string>
    <string name="title_activity_user_setting">UserSettingActivity</string>

    <string name="hello_blank_fragment">Halo</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_settings">Belo</string>
    <string name="exit_app">exit_app</string>

    <!--  -->
    <string name="cart_empty_img_desc">Keranjang kosong</string>
    <string name="cart_empty_title">Keranjang belanjamu masih kosong</string>
    <string name="cart_emtpy_subtitle">Daripada kosong, mending explore ratusan snack lezat di Alamart</string>
    <string name="cart_empty_back_button">Jelajahi Alamart</string>
    <string name="menu_beranda">Beranda</string>
    <string name="menu_telusuri">Telusuri</string>
    <string name="menu_toko">Toko</string>
    <string name="menu_keranjang">Keranjang</string>
    <string name="menu_akun">Akun</string>
    <string name="setting_bahasa">Bahasa</string>
    <string name="setting_exit">Keluar</string>
    <string name="search_box_hint">Cari apa yang kamu mau</string>

    <!--Profile-->
    <string name="email">Email</string>
    <string name="birthday">Birthday</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>

    <!-- Map -->
    <string name="mapbox_access_token">pk.eyJ1IjoiZXZhbnJpc2t5IiwiYSI6ImNrZnA1c25zMjBndzYycW41ODFseGF6cTcifQ.Pe1RWiNOTZgqPWKsCEbqdA</string>
    <string name="start_navigation">Start navigation</string>
    <string name="street">Street</string>
    <string name="satellite">Satellite</string>
    <string name="traffic_day">Traffic Day</string>
    <string name="exit_toast">Tekan sekali lagi untuk keluar</string>
</resources>